# modern-c

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  Dockerfile-base  Dockerfile-builder  license.txt  makefile  sonar-project.properties
.github/workflows/: build.yaml
src/: Makefile
src/00-encounter/: CMakeLists.txt  bad.c  getting-started.c  getting-started.h  makefile  read-number-main.c
src/00-encounter/starter/: detect-five.c  detect-five.h  read-number.c  read-number.h  starter.c  starter.h  starter_expo.h
src/01-Acquaintance/: makefile
src/01-Acquaintance/acquaintance/: acquaintance.c  acquaintance_expo.h  acquantinace.h
src/02-cognition/: makefile
src/02-cognition/cognition/: cognition.c  cognition_expo.h  mbstrings.c
src/03-experience/: makefile
src/03-experience/experience/: experience.c  experience.h  life.c
src/04-extra/: makefile  trampoline.c
src/docs/: takeaways.md
tests/test-00-encounter/: CMakeLists.txt  test-getting-started.cpp
tests/test-01-acquaintance/: CMakeLists.txt  test-euclid.cpp
tests/test-02-cognition/: CMakeLists.txt  test-circular.cpp
tests/test-03-experience/: CMakeLists.txt  test-B9.cpp  test-sighandler.cpp
tests/test-04-extra/: CMakeLists.txt
